--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,7 +1,12 @@
+// app
+$color-content-background : #f1f1f1;
+
+
 // fonts
 $color-font-primary : white;
 $color-font-secondary : black;
 
 // components
+$color-entry: #baa378;
 $color-primary : #2b2b2b;
 $color-secondary : black;
