--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,5 @@
 // app
-$color-content-background : #f1f1f1;
+$color-content-background : #f8f9fb;
 
 
 // fonts
@@ -7,6 +7,6 @@ $color-font-primary : white;
 $color-font-secondary : black;
 
 // components
-$color-entry: #baa378;
+$color-entry: #ffffff;
 $color-primary : #2b2b2b;
 $color-secondary : black;
