--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -10,3 +10,7 @@ $color-font-secondary : black;
 $color-entry: #ffffff;
 $color-primary : #2b2b2b;
 $color-secondary : black;
+
+// decors
+$c-shadow: #191919;
+
