add color palettes, pattern, some fixes

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -7,10 +7,19 @@ $color-font-primary : white;
 $color-font-secondary : black;
 
 // components
+//$background-color: #3a3a3a;
+//$foreground-color: #2b2b2b;
+$background-color: #3a3a3a;
+$foreground-color: #2b2b2b;
+
+
+
 $color-entry: #ffffff;
 $color-primary : #2b2b2b;
 $color-secondary : black;
 
 // decors
 $c-shadow: #191919;
+
+
 
